[package]
name = "dpub"
version = "0.1.0"
authors = ["Aqrun <aqrun@sina.com>"]
edition = "2018"
description = "简化日常发布操作的命令行工具"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"